null mgt and put method
