# swagger/swagger.yml
@@ -109,6 +109,28 @@ paths:
           description: '{string} success !'
         "403":
           description: no table
+    put:
+      tags:
+      - t
+      description: put data in table
+      operationId: TableController.Put data in table
+      parameters:
+      - in: path
+        name: table
+        description: Name of the table
+        required: true
+        type: string
+      - in: body
+        name: data
+        description: body for data content (Json format)
+        required: true
+        schema:
+          $ref: '#/definitions/json'
+      responses:
+        "200":
+          description: '{string} success'
+        "403":
+          description: :table put issue
     post:
       tags:
       - t
@@ -261,6 +283,9 @@ definitions:
     type: object
   TableQuery:
     title: TableQuery
+    type: object
+  json:
+    title: json
     type: object
   "true":
     title: "true"
